Fix bug #77677: WCOREDUMP not available on all systems

Add #ifdef WCOREDUMP around all uses